tests/models/struct/unnamed/string/fail/max_items.rs
use dade::model;
#[model]
struct TestModel (
   #[field(max_items = 2)]
    String
);
fn main() {}
